fix: add margin-top to actor details container for improved spacing

--- a/src/assets/css/_actor.scss
+++ b/src/assets/css/_actor.scss
@@ -12,6 +12,7 @@
         max-width: variables.$container-width;
         margin: 0 auto;
         padding: 0 1rem;
+        margin-top: 50px;
     }
 
     &__image {
